--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,10 @@ spring:
         show-sql: true
         hibernate:
             ddl-auto: create-drop
+        defer-datasource-initialization: true
+    sql:
+        init:
+            mode: always
+logging:
+    pattern:
+        dateformat: yyyy-MM-dd HH:mm:ss.SSS
